Fix align of text in pairing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -725,12 +725,13 @@ button#next{
     justify-content: space-evenly;
     align-items: center;
 }
-#pairing-wrapper .right {
+#pairing-wrapper #right {
     text-align: left;
 }
-#pairing-wrapper .left {
+#pairing-wrapper #left {
     text-align: right;
 }
+
 #pairing-wrapper .hook {
     pointer-events: all;
     background-color: #0066bb;
